--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Android / Chrome Theme Color -->
 <meta name="theme-color" content="#f9fafc">
-
+<meta name="mobile-web-app-capable" content="yes">
+  
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -49,3 +50,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
