--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Quiz PWA</title>
+<title>Polymer Quiz</title>
 
 <!-- iOS PWA Settings -->
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -50,4 +50,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
