--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="apple-touch-icon" sizes="192x192" href="./icon192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="./icon512.png">
+  
 
 <!-- Android / Chrome Theme Color -->
 <meta name="theme-color" content="#f9fafc">
@@ -50,5 +53,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
